metrics/kubernetes-prometheus/alertmanagetr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  type: NodePort
  ports:
    - protocol: TCP
      port: 9093
  externalIPs:
    - 192.168.1.111
