metrics/kubernetes-prometheus/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
spec:
  selector:
    app: prometheus-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 9090
  externalIPs:
    - 192.168.1.101
