metrics/kubernetes-prometheus/ingress-alertnamager-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertnamager-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: '$http_origin'
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  tls:
    - hosts:
        - andreybondarenko.com
      secretName: letsencrypt-prod
  rules:
    - host: andreybondarenko.com
      http:
        paths:
          - path: /alert
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
